--- a/profiles/lfos.yml
+++ b/profiles/lfos.yml
@@ -15,7 +15,7 @@ cluster: {
   availability_zone: "ca-ymq-2",
   validate_certs: False,
   private_net_name: "hypci",
-  flavor_name: "v1-performance-2",
+  flavor_name: "v1-standard-4",
   public_key_file: "{{ lookup('env','WORKSPACE') }}/fd.pub",
   private_key_file: "{{ lookup('env','WORKSPACE') }}/fd",
   # This variable indicate what IP should be used, only valid values are
