--- a/profiles/netbc1st.yml
+++ b/profiles/netbc1st.yml
@@ -11,28 +11,28 @@ fabric: {
   tls: true,
 
   network: {
-    fabric001: {
+    osfabric001: {
       cas: ["ca1st.orga"],
       peers: ["anchor@peer1st.orga", "anchor@peer1st.orgb"],
       orderers: ["orderer1st.orgc", "orderer1st.orgd"],
       zookeepers: ["zookeeper1st"],
       kafkas: ["kafka1st"]
     },
-    fabric002: {
+    osfabric002: {
       cas: ["ca1st.orgb"],
       peers: ["worker@peer2nd.orga", "worker@peer2nd.orgb"],
       orderers: ["orderer2nd.orgc", "orderer2nd.orgd"],
       zookeepers: ["zookeeper2nd"],
       kafkas: ["kafka2nd"]
     },
-    fabric003: {
+    osfabric003: {
       cas: ["ca1st.orgc", "ca1st.orgd"],
       peers: ["worker@peer3rd.orga", "worker@peer3rd.orgb"],
       orderers: [],
       zookeepers: ["zookeeper3rd"],
       kafkas: ["kafka3rd"]
     },
-    fabric004: {
+    osfabric004: {
       cas: [],
       peers: [],
       orderers: [],
