--- a/profiles/netbc1st.yml
+++ b/profiles/netbc1st.yml
@@ -1,7 +1,7 @@
 ---
 GIT_URL: "http://gerrit.hyperledger.org/r/fabric"
 
-GERRIT_REFSPEC: "refs/changes/13/13113/1"
+GERRIT_REFSPEC: ""
 
 fabric: {
 
