--- a/profiles/envibmos.yml
+++ b/profiles/envibmos.yml
@@ -57,10 +57,10 @@ cluster: {
   etcdnodes: ["fabric001", "fabric002", "fabric003"],
   builders: ["fabric005"],
 
-  flannel_repo: "http://10.10.25.9/fv0.7.1/flannel-v0.7.1-linux-amd64.tar.gz",
-  etcd_repo: "http://10.10.25.9/etcdv3.2.0/etcd-v3.2.0-linux-amd64.tar.gz",
-  k8s_repo: "http://10.10.25.9/k8sv1.7.0/",
-  go_repo: "https://dl.google.com/go/go1.9.2.linux-amd64.tar.gz",
+  flannel_repo: "http://10.10.25.61/fv0.7.1/flannel-v0.7.1-linux-amd64.tar.gz",
+  etcd_repo: "http://10.10.25.61/etcdv3.2.0/etcd-v3.2.0-linux-amd64.tar.gz",
+  k8s_repo: "http://10.10.25.61/k8sv1.7.0/",
+  go_repo: "http://10.10.25.61/golang/go1.9.2.linux-amd64.tar.gz",
   
   # If volume want to be used, specify a size in GB, make volume size 0 if wish
   # not to use volume from your cloud
