--- a/pipelines/setupnmon.yml
+++ b/pipelines/setupnmon.yml
@@ -5,7 +5,7 @@
   become: true
   become_user: root
   tasks:
-    - name: Unpack nmon binaries
+    - name: Unpack nmon binary
       unarchive:
         src: "https://ayera.dl.sourceforge.net/project/nmon/nmon16g_x86.tar.gz"
         dest: "/usr/local/bin"
@@ -14,6 +14,27 @@
           - nmon16g_x86_sles12
           - nmon16g_x86_fedora25
           - nmon16g_x86_rhel72
+        copy: no
+        mode: +x
+
+    - name: Install packages
+      apt:
+        name: ksh
+
+    - name: Unpack nmonchart binary
+      unarchive:
+        src: "https://gigenet.dl.sourceforge.net/project/nmon/nmonchart33.tar"
+        dest: "/usr/local/bin"
+        exclude:
+          - README
+          - nmon_upload.html
+          - nmon_upload.php
+          - nmonchart_cron
+          - nmonchart_license
+          - sampleC.html
+          - sampleC.nmon
+          - sampleD.html
+          - sampleD.nmon
         copy: no
         mode: +x
 
