--- a/pipelines/getnmchart.yml
+++ b/pipelines/getnmchart.yml
@@ -31,3 +31,4 @@
       fetch:
         src: "/opt/{{ hostvars[inventory_hostname].inter_name }}.html"
         dest: "/var/www/html/{{ hostvars['cloud'].targetdir }}"
+        flat: yes
