--- a/pipelines/getnmchart.yml
+++ b/pipelines/getnmchart.yml
@@ -30,5 +30,4 @@
     - name: gather nmonchart
       fetch:
         src: "/opt/{{ hostvars[inventory_hostname].inter_name }}.html"
-        dest: "/var/www/html/{{ hostvars['cloud'].targetdir }}/"
-        flat: yes
+        dest: "~/"
