--- a/pipelines/getnmchart.yml
+++ b/pipelines/getnmchart.yml
@@ -1,8 +1,6 @@
 - name: Get start timestamp
   hosts: cloud
   connection: local
-  become: true
-  become_user: root
   tasks:
     - name: Get a build number
       set_fact:
@@ -12,7 +10,7 @@
         targetdir: "{{ ansible_date_time.date }}B{{ buildno }}"
     - name: Setup hyperledger directory
       file:
-        path: "/var/www/html/{{ targetdir }}"
+        path: "/var/www/html/reports/{{ targetdir }}"
         state: directory
 
 - name: Get start timestamp
@@ -30,4 +28,5 @@
     - name: gather nmonchart
       fetch:
         src: "/opt/{{ hostvars[inventory_hostname].inter_name }}.html"
-        dest: "~/"
+        dest: "/var/www/html/reports/{{ hostvars['cloud'].targetdir }}/"
+        flat: yes
