--- a/profiles/netbc1st.yml
+++ b/profiles/netbc1st.yml
@@ -2,7 +2,7 @@
 GERRIT_REFSPEC: ""
 GIT_URL: "http://gerrit.hyperledger.org/r/fabric"
 fabric: 
-  baseimage_tag: ""
+  baseimage_tag: "x86_64-1.1.0-alpha"
   ca: 
     admin: admin
     adminpw: adminpw
