--- a/pipelines/setupnmon.yml
+++ b/pipelines/setupnmon.yml
@@ -31,3 +31,9 @@
 
     - name: Start nmon
       command: "nmon16g_x86_ubuntu1604 -fT -s 30 -m /opt -F {{ hostvars[inventory_hostname].inter_name }}.nmon"
+      environment:
+        NMON_TIMESTAMP: 0
+        NMON_START: udpstart
+        NMON_SNAP: udpsnap
+        NMON_END: ""
+        NMON_ONE_IN: 1
