--- a/pipelines/getnmchart.yml
+++ b/pipelines/getnmchart.yml
@@ -25,7 +25,7 @@
       shell: kill -USR2 $(pidof nmon16g_x86_ubuntu1604)
 
     - name: combine the nmon chart files
-      shell: cat /opt/{{ hostvars[inventory_hostname].inter_name }}.nmon udp.csv > /opt/data.nmon
+      shell: cat /opt/{{ hostvars[inventory_hostname].inter_name }}.nmon /opt/udp.csv > /opt/data.nmon
 
     - name: create nmonchart
       command: >-
