--- a/pipelines/getnmchart.yml
+++ b/pipelines/getnmchart.yml
@@ -38,6 +38,6 @@
 
     - name: gather nmonchart
       fetch:
-        src: "/opt/{{ hostvars[inventory_hostname].inter_name }}.{{ jobname }}.html"
+        src: "/opt/{{ hostvars[inventory_hostname].inter_name }}.{{ jobname }}.{{ dtype }}.html"
         dest: "/var/www/html/reports/{{ hostvars['cloud'].targetdir }}/"
         flat: yes
