--- a/pipelines/setupnmon.yml
+++ b/pipelines/setupnmon.yml
@@ -30,7 +30,7 @@
         mode: +x
 
     - name: Start nmon
-      command: "nmon16g_x86_ubuntu1604 -fT -s 30 -m /opt -F {{ hostvars[inventory_hostname].inter_name }}.nmon"
+      command: "nmon16g_x86_ubuntu1604 -fT -s 30 -m /opt -F {{ hostvars[inventory_hostname].inter_name }}.{{ tname }}.nmon"
       environment:
         NMON_TIMESTAMP: 0
         NMON_START: udpstart
