--- a/profiles/netbc1st.yml
+++ b/profiles/netbc1st.yml
@@ -82,7 +82,7 @@ fabric:
       zookeepers: []
   peer_db: CouchDB
   repo: 
-    bin: ""
+    bin: "http://10.10.25.61/flbin.tar.gz"
     url: hyperledger/
   ssh_user: ubuntu
   tls: true
