--- a/profiles/envibmos.yml
+++ b/profiles/envibmos.yml
@@ -19,7 +19,7 @@ cluster: {
   availability_zone: "nova",
   validate_certs: False,
   private_net_name: "hlftanet",
-  flavor_name: "com.standard",
+  flavor_name: "m1.xlarge",
   public_key_file: "{{ lookup('env','WORKSPACE') }}/fabric-test/cello/src/agent/ansible/run/publickey",
   private_key_file: "{{ lookup('env','WORKSPACE') }}/fabric-test/cello/src/agent/ansible/run/privatekey",
   # This variable indicate what IP should be used, only valid values are
@@ -52,10 +52,10 @@ cluster: {
 
   # stack_size determines how many virtual or physical machines we will have
   # each machine will be named ${name_prefix}001 to ${name_prefix}${stack_size}
-  stack_size: 10,
+  stack_size: 8,
 
   etcdnodes: ["wfabric001", "wfabric002", "wfabric003"],
-  builders: ["wfabric005"],
+  builders: ["wfabric008"],
 
   flannel_repo: "http://10.10.25.61/fv0.7.1/flannel-v0.7.1-linux-amd64.tar.gz",
   etcd_repo: "http://10.10.25.61/etcdv3.2.0/etcd-v3.2.0-linux-amd64.tar.gz",
