--- a/profiles/org32p64.yml
+++ b/profiles/org32p64.yml
@@ -11,6 +11,9 @@ fabric:
     wfabric001: 
       cas: 
         - ca1st.orga1
+        - ca1st.orga2
+        - ca1st.orga3
+        - ca1st.orga4
       kafkas: 
         - kafka1st
       orderers: 
@@ -18,43 +21,24 @@ fabric:
       peers: 
         - anchor@peer1st.orga1
         - worker@peer2nd.orga1
-      zookeepers: 
-        - zookeeper1st
-    wfabric002: 
-      cas: 
-        - ca1st.orga2
-      kafkas: 
-        - kafka2nd
-      orderers: 
-        - orderer2nd.orgo
-      peers: 
         - anchor@peer1st.orga2
         - worker@peer2nd.orga2
-      zookeepers: 
-        - zookeeper2nd
-    wfabric003: 
-      cas: 
-        - ca1st.orga3
-        - ca1st.orga4
-      kafkas: 
-        - kafka3rd
-      orderers: 
-        - orderer2nd.orgo
-      peers: 
         - anchor@peer1st.orga3
         - worker@peer2nd.orga3
         - anchor@peer1st.orga4
         - worker@peer2nd.orga4
       zookeepers: 
-        - zookeeper3rd
-    wfabric004: 
+        - zookeeper1st
+    wfabric002: 
       cas: 
         - ca1st.orga5
         - ca1st.orga6
         - ca1st.orga7
         - ca1st.orga8
-      kafkas: []
-      orderers: []
+      kafkas:
+        - kafka2nd
+      orderers: 
+        - orderer2nd.orgo
       peers: 
         - anchor@peer1st.orga5
         - worker@peer2nd.orga5
@@ -64,15 +48,18 @@ fabric:
         - worker@peer2nd.orga7
         - anchor@peer1st.orga8
         - worker@peer2nd.orga8
-      zookeepers: []
-    wfabric005: 
+      zookeepers: 
+        - zookeeper2nd
+    wfabric003:
       cas: 
         - ca1st.orga9
         - ca1st.orga10
         - ca1st.orga11
         - ca1st.orga12
-      kafkas: []
-      orderers: []
+      kafkas: 
+        - kafka3rd
+      orderers: 
+        - orderer3rd.orgo
       peers: 
         - anchor@peer1st.orga9
         - worker@peer2nd.orga9
@@ -82,8 +69,9 @@ fabric:
         - worker@peer2nd.orga11
         - anchor@peer1st.orga12
         - worker@peer2nd.orga12
-      zookeepers: []
-    wfabric006: 
+      zookeepers: 
+        - zookeeper3rd
+    wfabric004: 
       cas: 
         - ca1st.orga13
         - ca1st.orga14
@@ -101,7 +89,7 @@ fabric:
         - anchor@peer1st.orga16
         - worker@peer2nd.orga16
       zookeepers: []
-    wfabric007: 
+    wfabric005: 
       cas: 
         - ca1st.orga17
         - ca1st.orga18
@@ -119,7 +107,7 @@ fabric:
         - anchor@peer1st.orga20
         - worker@peer2nd.orga20
       zookeepers: []
-    wfabric008: 
+    wfabric006: 
       cas: 
         - ca1st.orga21
         - ca1st.orga22
@@ -137,7 +125,7 @@ fabric:
         - anchor@peer1st.orga24
         - worker@peer2nd.orga24
       zookeepers: []
-    wfabric009: 
+    wfabric007: 
       cas: 
         - ca1st.orga25
         - ca1st.orga26
@@ -155,7 +143,7 @@ fabric:
         - anchor@peer1st.orga28
         - worker@peer2nd.orga28
       zookeepers: []
-    wfabric010: 
+    wfabric008: 
       cas: 
         - ca1st.orga29
         - ca1st.orga30
