--- a/profiles/testconfig.yml
+++ b/profiles/testconfig.yml
@@ -12,9 +12,12 @@ netbc1st:
     extra: "tool_type=pte pteenv=2channels chaincode=samplejs testcase=FAB-7204-4i testcase_query=FAB-7204-4q"
     skip_tags: "code,make,cleanfabric"
 n1bc1st:
-  - name: "FAB-7246-4i"
-    extra: "tool_type=pte pteenv=2channels chaincode=samplejs testcase=FAB-7246-4i testcase_query=FAB-7246-4q"
+ - name: "FAB-7334-4i"
+    extra: "tool_type=pte pteenv=2channels chaincode=samplejs testcase=FAB-7334-4i testcase_query=FAB-7204-4q"
     skip_tags: "code,make,cleanfabric"
+  - name: "FAB-7204-4i"
+    extra: "tool_type=pte pteenv=2channels chaincode=samplejs testcase=FAB-7204-4i testcase_query=FAB-7204-4q"
+    skip_tags: "code,make,cleanfabric"    
 org32p64:
   - name: "FAB-8208-64i"
     extra: "tool_type=pte pteenv=mh8channels chaincode=samplecc testcase=FAB-8208-64i testcase_query=FAB-8208-64q"
