--- a/pipelines/getnmchart.yml
+++ b/pipelines/getnmchart.yml
@@ -23,6 +23,8 @@
   tasks:
     - name: stop the nmon daemon
       shell: kill -USR2 $(pidof nmon16g_x86_ubuntu1604)
+      ignore_errors: yes
+      tags: killnmon
 
     - name: combine the nmon chart files
       shell: cat /opt/{{ hostvars[inventory_hostname].inter_name }}.{{ tname }}.nmon /opt/udp.csv > /opt/data.nmon
@@ -35,9 +37,11 @@
       command: >-
         nmonchart /opt/data.nmon
         /opt/{{ hostvars[inventory_hostname].inter_name }}.{{ jobname }}.{{ tname }}.html
+      tags: createcharts
 
     - name: gather nmonchart
       fetch:
         src: "/opt/{{ hostvars[inventory_hostname].inter_name }}.{{ jobname }}.{{ tname }}.html"
+      tags: getcharts
         dest: "/var/www/html/reports/{{ hostvars['cloud'].targetdir }}/"
         flat: yes
