--- a/profiles/envibmos.yml
+++ b/profiles/envibmos.yml
@@ -57,9 +57,9 @@ cluster: {
   etcdnodes: ["wfabric001", "wfabric002", "wfabric003"],
   builders: ["wfabric008"],
 
-  flannel_repo: "http://10.10.25.61/fv0.10.0/flannel-v0.10.0-linux-amd64.tar.gz",
-  etcd_repo: "http://10.10.25.61/etcdv3.3.2/etcd-v3.3.2-linux-amd64.tar.gz",
-  k8s_repo: "http://10.10.25.61/k8sv1.9.1/",
+  flannel_repo: "http://10.10.25.61/flanneld/flannel-v0.10.0-linux-amd64.tar.gz",
+  etcd_repo: "http://10.10.25.61/etcd/etcd-v3.3.2-linux-amd64.tar.gz",
+  k8s_repo: "http://10.10.25.61/k8s/k8sv1.9.1/",
   go_repo: "http://10.10.25.61/golang/go1.9.2.linux-amd64.tar.gz",
   
   # If volume want to be used, specify a size in GB, make volume size 0 if wish
