--- a/profiles/sampletest.yml
+++ b/profiles/sampletest.yml
@@ -52,6 +52,30 @@ fabric:
         - worker@peer2nd.orgb
         - worker@peer3rd.orgb
       zookeepers: []
+      wfabric005: 
+      cas: []
+      kafkas: []
+      orderers: []
+      peers: []
+      zookeepers: []
+    wfabric006: 
+      cas: []
+      kafkas: []
+      orderers: []
+      peers: []
+      zookeepers: []
+    wfabric007: 
+      cas: []
+      kafkas: []
+      orderers: []
+      peers: []
+      zookeepers: []
+    wfabric008: 
+      cas: []
+      kafkas: []
+      orderers: []
+      peers: []
+zookeepers: []
   peer_db: goleveldb
   repo: 
     bin: "http://10.10.25.61/flbin.tar.gz"
